--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <h1>Нюдсы Алишера</h1>
+      <h1>Grid layout</h1>
     </div>
 
     <div class="row">
@@ -47,3 +47,4 @@
     </div>
   </body>
 </html>
+
